fix: adjust Experiment for extracted java-babylon